feat: implement the HELP command and fix some strings issues